--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+/* cedarville-cursive-regular - latin */
+@font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Cedarville Cursive';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/cedarville-cursive-v17-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+
 body {
     font-family: 'Lato', sans-serif;
     background-color: #FFD1DC;
@@ -18,13 +27,21 @@ body {
     font-size: 3em;
     color: #3A3A3A;
     animation: fade-in-down 2s ease;
+    margin-bottom: -200px;
+    top: -100px;
+    position: relative;
 }
 
 .tagline {
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 1.5em;
+    font-family: 'Cedarville Cursive', sans-serif;
+    font-size: 2em;
     color: #A8D5BA;
     animation: fade-in-up 2s ease;
+    text-shadow:
+    1px 1px 0 #000,
+    -1px 1px 0 #000,
+    -1px -1px 0 #000,
+    1px -1px 0 #000;
 }
 
 @keyframes fade-in-down {
