--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,6 @@ body {
     font-size: 3em;
     color: #3A3A3A;
     animation: fade-in-down 2s ease;
-    margin-bottom: -200px;
     top: -100px;
     position: relative;
     max-width: 100%;
@@ -41,6 +40,8 @@ body {
     font-size: 3em;
     color: #3A3A3A;
     animation: fade-in-up 2s ease;
+    position: relative;
+    top: -25vh;
 }
 
 @keyframes fade-in-down {
